# sudan

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sudan.py
src/sudan/: __init__.py  annotation.py  cli.py  sudan.py  tools.py  utilities.py
src/sudan/sudan_db/: README.MD
src/sudan/tools/: __init__.py  aragorn.py  barrnap.py  cmscan.py  minced.py  prodigal.py
tests/: aragorn_test.py  barrnap_test.py  cmscan_test.py  conftest.py  minced_test.py  sudan_test.py  sudan_tests.py  toolkit_test.py
tests/hand_test/: aragorn.out  cmscan.out  minced.out.gff
tests/test_annotation/: barrnap.out  cmscan.out
