[metadata]
name = sudan
description = Super-Duper-ANnotator
long_description = file: README.MD
author = aglab
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = 
    sudan
    sudan.tools
scripts =
    bin/sudan
#install_requires =
#   todo manage deps with conda install 
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=3.0.0
    flake8>=4.0
    tox>=3.24
    mypy>=0.910

[flake8]
max-line-length = 81